changes from a long time ago

--- a/js/index.html
+++ b/js/index.html
@@ -4,7 +4,6 @@
 	<meta charset="utf-8"/>
 	<title>Der Baum des Pythagoras!</title>
 	<link rel="icon" href="/favicon.png" type="image/png" />
-	<!-- <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script> -->
 	<style media="screen">
 
 	html, body {
@@ -41,7 +40,7 @@
 </head>
 <body>
 	<span id="fps"></span>
-	<span id="animation-checkbox"><input type="checkbox"/></span>
+	<span id="animation-checkbox"><input type="checkbox" checked="true"/></span>
 
 	<canvas id="canvas"></canvas>
 
